assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');

body, html{
    /* padding: 3px; */
    margin: 0;
    height: 100%;
    color: #0000ff;
    background-color: #c4c4d1;
    font-family: futura-pt, sans-serif;
    font-size: 18px;
    
  }
  
  *, *:before, *:after {
    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
   }
  
  *{
      -moz-osx-font-smoothing: grayscale;
      -webkit-font-smoothing: antialiased;
  }

.page-container{
  width: 100%;
  height: 100%;
  max-width: 450px;
  position: absolute;
  right:0;
}

.app-body{
  width: 100%;
  max-width: 450px;
  height: 100%;
  position: relative;
  background-color: white;
  overflow-y: scroll;
  overflow-x: hidden;
  /* padding: 15px; */
}

.app-body::-webkit-scrollbar {
  width: 5px;
  padding: 3px;
}
 
.app-body::-webkit-scrollbar-track {
  box-shadow: none;
  background-color: white;
}
 
.app-body::-webkit-scrollbar-thumb {
  background-color: rgb(0,0,255);
}

header{
    padding-bottom: 40px;
    width: 100%;
    display: grid;
    grid-template-columns: 200px 1fr;
    position: absolute;
    padding: 15px;
    z-index: 20;
}

.menu{
  text-align: right;
  color: #0000ff;
}


.container {
    font-size: 1em;
    font-family: futura-pt, sans-serif;
    font-weight: 500;
    font-style: normal;
    margin: 0;
    padding: 8px;
    height: auto;
    padding: 120px 15px 15px;
    width: 100%;
    color: #0000ff;
    min-height: 100vh;
    position: absolute;
    top:0;
    left: 0;
    transition: left .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    overflow-y: scroll;
    background-color: #fff;
    display: flex;
    flex-direction: column;
}

.main{
  flex: 1;
  display: flex;
  flex-direction: column;
}

.info{
  z-index: 10;
}

.about{
  left: 100vw;
  z-index: 1;
  height: 0;
  overflow: hidden;
}

.about--open .about{
  left: 0;
  height: auto;
  transition: left .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);;

}

.about--open .info{
  left: -100vw;
  transition: left .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);;

}

.paused .fade{
  opacity: .2;
  transition: opacity .2s ease-in-out;
}

.fade{
  transition: opacity .2s ease-in-out;
}

.paused .paused-display{
  opacity: 1;
  transition: top .2s ease-in-out;
  top: 0;
}

.paused .popup-timer{
  /* opacity: 0; */
  transition: top .2s ease-in-out;
  top: -168px;
}

.popup-timer, .paused-display, section, img{
  transition: opacity .2s ease-in-out;
}


.paused .switch{
  opacity: 1;
}

i, em{
    font-family: futura-pt, sans-serif;
    font-weight: 500;
    font-style: italic;
}

b, strong{
    font-family: futura-pt-bold, sans-serif;
    font-weight: 700;
    font-style: normal;
}

h1, h2{
    margin: 0;
    padding: 0;
    font-size: 1em;
    font-weight: normal;
}

.toggle-button{
  margin-bottom: 15px;
}

.box{
    padding: 13px;
    border: 1px solid #0000ff;
    margin-bottom: 15px;
    border-radius: 5px;
}

.green-shadow{
  box-shadow: 4px 4px 6px rgba(0,255,0, 1);
}

.red-shadow{
  box-shadow: 4px 4px 4px rgba(255,0,0, .7);
}


.body-content{
    padding-bottom: 1.5em;
    padding-top: 1.5em;
}

.body-content p{
  padding-bottom: 1em;
}

.body-content p:last-child{
  padding-bottom: 0;
}


.box-header{
  font-size: .875em;
  font-family: futura-pt-bold, sans-serif;
  font-weight: 700;
  font-style: normal;
  text-transform: uppercase;
}

.popup-title{
  padding-top: 22px;
  font-size: 1.5em;
  padding-right: 30px;
}

.popup-details{
  font-size: 1em;
  display: grid;
  grid-template-columns: 90px 1fr;
  row-gap: 8px;
  column-gap: 1em;
  margin: 0;
  padding: 0;
  padding-top: 22px;
  font-weight: 400;
  padding-right: 20px;
}


.credit-details{
  font-size: 1em;
  margin: 0;
  padding: 0;
  padding-top: 22px;
  font-weight: 400;
  padding-right: 20px;
}

dl{
  display: grid;
  grid-template-columns: 120px 1fr;
  row-gap: 8px;
  column-gap: 1em;
}

dt{
  /* text-transform: uppercase; */
}

dt, dd{
  padding: 0;
  margin: 0;
}

p{
    margin: 0;
    padding: 0;
}

.timer-box{
    min-height: 118px;
    position: relative;
    overflow: hidden;
    flex: 1;
}

.popup-timer{
    padding: 10px;
    position: absolute;
    width: 100%;
    height: 100%;
    top:0;
    left: 0;
    z-index: 1;
    transition: top .2s ease-in-out;
}

.timer-display{
  font-family: 'Major Mono Display', monospace;
  font-size: 45px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 15px 0 15px;
  height: calc(100% - 30px);
}

.paused-display{
  position: absolute;
  width: 100%;
  height: 100%;
  line-height: 100%;
  text-align: center;
  top: 168px;
  left: 0;
  font-family: futura-pt-bold, sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 45px;
  z-index: 2;
  opacity: 0;
  background-color: white;
  text-transform: uppercase;
  transition: top .2s ease-in-out;
}

div#content {
    width: 200px;
}

div[id^="popup-"] {
    margin-bottom: 10px;
}

footer{
    padding-top: 25px;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.contact-link-container{
  align-self: end;
}

.wrong-logo{
    float: right;
}


/* LINKS */

.link-item{
  font-size: 14px;
  font-family: futura-pt-bold, sans-serif;
  font-weight: 700;
}

footer .link-item{
  font-size: 10px;
}

.link-item:link, .link-item:visited{
  text-decoration: none;
  text-transform: uppercase;
}

.link-item:hover{
  color: #ff00ff;
}

a, a:link, a:visited{
  color: inherit;
}

a:hover, a:active{
  color: #ff00ff;
}


/* TOGGLE BUTTON STYLES */

.switch:hover .slider{
  outline-color: #ff00ff;;
}

.switch:hover .slider-label:before{
  color: #ff00ff;;
}

.switch:hover .slider:before{
  background-color: #ff00ff;
}

.switch {
    position: relative;
    display: inline-block;
    width: 150px;
    padding-left: 60px;
    height: 20px;
    font-family: futura-pt-bold, sans-serif;
    font-size: 12px;
    line-height: 20px;
    align-self: end;
    cursor: pointer;
    text-transform: uppercase;
  }
  
  .switch input { 
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    width: 50px;
    height: 20px;
    background-color: #fff;
    outline: 1px solid #0000ff;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 14px;
    width: 14px;
    left: 4px;
    bottom: 3px;
    background-color: #0000ff;
    transition: left .2s ease-in-out;
  }

  .switch:hover .slider{
      background-color: #fff;
  }
  
  input:checked + .slider {
    /* background-color: #2196F3; */
    background-color: #fff;
    /* outline-color: limegreen; */
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px magenta;
  }
  
  input:checked + .slider:before {
    left: 32px;
    /* background-color: limegreen; */
    transition: left .2s ease-in-out;
  }

  .slider-label:before{
      content: "On / Off";
  }

  .paused .slider-label:before{
      content: "On / Off";
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }


  /* BUTTON STYLES */
  
    input[type=button]{
      border: 2px solid blue;
      background-color: transparent;
      outline: transparent;
      color: blue;
      font-family: inherit;
      font-size: .875em;
      font-family: futura-pt-bold, sans-serif;
      font-weight: 700;
      padding: 5px 20px 5px;
      border-radius: 30px;
      margin-bottom: .5em;
      margin-right: .5em;
      cursor: pointer;
    }

    input[type=button]:hover{
      color: #ff00ff;
      border-color: #ff00ff;
      cursor: pointer;
    }

    input[type=button]:active{
      transform: scale(0.98);
    }

